# Deep_Learning_for_Solving_And_Estimating_Dynamic_Economic_Models

./: .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  COPYRIGHT_AUDIT.csv  COURSE_MAP.md  LICENSE  LICENSE-content.md  MATERIALS_CROSSWALK.md  Makefile  NOTICE.md  READINGS_AUDIT.csv  README.md  course.yml  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: validate.yml
assets/: attributions.yml
data/: README.md
lecture_script/: Deep_Learning_for_Solving_And_Estimating_Dynamic_Economic_Models.tex  glossary.md  lecture_script.tex  script_to_lectures.md
lectures/lecture_01_B00_orientation_setup_reproducibility/: README.md
lectures/lecture_01_B00_python_primer/: README.md
lectures/lecture_01_python_primer/: README.md
lectures/lecture_02_B01_intro_deep_learning/: README.md
lectures/lecture_02_B01_why_deep_learning/: README.md
lectures/lecture_02_intro_deep_learning/: README.md
lectures/lecture_03_B02_deep_equilibrium_nets/: README.md
legacy/: Geneva2026_TIMETABLE.md
readings/: README.md  bibliography.bib
scripts/: _at_a_glance.md  _patch_slide_headers.py  _render_lecture_readmes.py  _render_reading_links.py  _split_intro_deck.py  _split_remaining_decks.py  _stamp_notebook_headers.py  build_script.sh  build_slides.sh  check_american_english.py  normalize_headers.py  notebook_attribution.csv  notebook_chapter_map.csv  run_all_smoke_tests.py  validate_headers.py  validate_landing_page_assets.py  validate_no_content_loss.py  validate_no_private_paths.py  validate_readings.py  validate_slide_inventory.py
tests/: test_climate_smoke.py  test_deqn_smoke.py  test_gp_smoke.py  test_notebook_execution.py  test_pinn_smoke.py
toolkit/: README.md
(+560 files in other folders)
