[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dlef"
version = "0.1.0"
description = "Teaching package for the Deep Learning for Economics and Finance course."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Simon Scheidegger" }
]
keywords = [
  "deep-learning",
  "economics",
  "finance",
  "dsge",
  "heterogeneous-agents",
  "pinns",
  "gaussian-processes",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/sischei/Deep_Learning_for_Solving_And_Estimating_Dynamic_Economic_Models"
Repository = "https://github.com/sischei/Deep_Learning_for_Solving_And_Estimating_Dynamic_Economic_Models"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dlef*"]
