[project]
name = "deep-learning-for-solving-and-estimating-dynamic-economic-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "botorch>=0.11",
    "flax>=0.7.0",
    "gpytorch>=1.11",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "optax>=0.1.5",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "requests>=2.28",
    "salib>=1.4",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "tensorboard>=2.15",
    "tensorflow>=2.15",
    "tensorflow-probability>=0.23",
    "torch>=2.0",
]
